# GerdaEngine

./: CMakeLists.txt  Doxyfile  GerdaEngine.cmake  GerdaEngine.cpp  GerdaEngine.hh  LICENSE  README.md  ShtaEngine.hh  get_externs.sh  gitacts_setup.sh
.github/workflows/: cmake.yml
Data/: sla_test03.xml  sla_test03_a.xml
Data/default_shaders/: shader_FB_def.frag  shader_FB_def.vert  shader_FB_mix.frag  shader_c_back.frag  shader_x_back.frag
GerdaCore/: GerdaConfig.hh  GerdaCore.hh  GerdaDataContainer.hh  GerdaDevelopment.hh  GerdaDraw.hh  GerdaDrawPrimitives.hh  GerdaFSM.hh  GerdaGUI.hh  GerdaGamePrimitives.hh  GerdaImage.hh  GerdaInput.hh  GerdaInputDev.hh  GerdaMath.hh  GerdaOther.hh  GerdaSLa.hh  GerdaSystem.hh  GerdaXML.hh
GerdaHLT/: GerdaDataContainer.hh  GerdaDialog.hh  GerdaHLT.hh  GerdaMap.hh  GerdaObject.hh  GerdaParticle.hh  GerdaPhysic.hh  GerdaScene.hh  GerdaSprite.hh
GerdaMath/: GerdaAlgo.hh  GerdaMath.hh  GerdaMathConst.hh  GerdaRandom.hh  GerdaVector.hh
GerdaOpenGL/: GerdaCamera.hh  GerdaDrawPrimitives.hh  GerdaFrameBuffer.hh  GerdaOpenGL.hh  GerdaSLa.hh  GerdaShader.hh  GerdaTexture.hh
GerdaSDL/: GerdaSDL.hh  GerdaSDL_prerequests.hh
ShtaHLT/: ShtaConfig.hh  ShtaDialogs.hh  ShtaEvents.hh  ShtaUI.hh
Tests/: Test00.cpp  Test01.cpp  Test02.cpp  Test03.####  Test03.cpp  Test04.cpp  TestShtaConfig.cpp  TestShtaDialogsHLT.cpp  TestShtaEvents.cpp  TestShtaUI.cpp
